fix jumping to section

--- a/app/components/note/note.css
+++ b/app/components/note/note.css
@@ -1,5 +1,5 @@
 .note-content {
-    width: calc(100% - 200px);
+    width: calc(100% - 300px - 200px);
     position: relative;
     border: 1px solid var(--border-color);
 }
@@ -14,23 +14,37 @@
     z-index: 1000;
     pointer-events: none;
 }
-.note-content textarea, .note-content::before, .note-content .tmp {
+.note-content textarea, .note-content::before, .tmp {
     font-family: monospace;
 }
-before, .note-content .tmp {
+.tmp {
     position: absolute;
     pointer-events: none;
     visibility: hidden;
     top: 0;
     left: 0;
 }
+.note-content note {
+    height: 100%;
+    display: block;
+}
+.note-content textarea, .note-content note {
+    overflow-y: scroll;
+}
+.note-content .wrapper, .note-content textarea {
+    width: 100%;
+    height: 100%;
+}
 .note-content textarea {
     resize: none;
-    height: 100%;
-    width: calc(100% - 300px);
     box-sizing: border-box;
     white-space: pre-wrap;
     word-break: break-all;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
 }
 .note-content textarea,
 .note-content textarea:focus {
